# dns

./: .gitconfig  Cargo.toml  README.md  license.txt
src/: cli.rs  config.rs  dns.rs  main.rs  options.rs
src/resources/: usage.txt
