[package]
name = "blobdns"
description = "A command-line global DNS checker"
authors = ["Stanley Hussein <sh@withblob.com>"]
categories = ["dns", "command-line-utilities"]
homepage = "https://withblob.com/dns"
license = "MIT"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
serde = {version = "1", features=["derive"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = {version = "1", features = ["full"]}
ansi_term = "0.12"
